--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -77,6 +77,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="pushButton_shutdown">
+         <property name="text">
+          <string>Shutdown</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="Line" name="line_2">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
